--- a/swiper/style.css
+++ b/swiper/style.css
@@ -1,2 +1,20 @@
 @charset "utf-8";
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+body {
+    color: #333;
+}
+
+a {
+    color: #333;
+    text-decoration: none;
+}
+
+.swiper-slide {
+    height: 300px;
+    background-color: #fff;
+    font-size: 300px;
+}
